fix: the damn overflow hunt us again

--- a/src/index.css
+++ b/src/index.css
@@ -25,5 +25,4 @@ body {
   display: flex;
   justify-content: center;
   background-color: #f3f3f3;
-  overflow-x: hidden;
 }
